--- a/options.conf
+++ b/options.conf
@@ -1,5 +1,5 @@
 # operating environment for the current working directory
-ltmh_dir=/home/ltmh
+ltmh_dir=
 
 # set the default install path, you can freely specify
 nginx_install_dir=/usr/local/nginx
@@ -45,15 +45,34 @@ conn_ftpusers_dbpwd=
 
 #########################################################################
 # Backup Dest directory, change this if you have someother location
-backup_dir=/home/backup
 
-# How many days before the backup directory will be removed
-expired_days=5
+space=x
+# backup needed script file directory, access to the current directory.
+scriptdir=/home/ltmh/backup
+# seven bovine AccessKey, to the http://portal.qiniu.com/ acquisition, log on seven may seven cattle in the "account settings" - "key" can be found in the.
+qiniuAccessKey=123456
+# seven bovine SecretKey, to the http://portal.qiniu.com/ acquisition, log on seven may seven cattle in the "account settings" - "key" can be found in the.
+QINIUSecretKey=123456
+# backup password, please enter the password to 20 characters of high strength more than zip, the brute force attack speed very quickly.
+backup_file_compression_password=123456
+# to backup the database name, such as the need to back up multiple sites or multiple databases make a script execution between different, this can reduce #server because of backup performance by.
+database_name=123456
+#Mysql user name (export authority, must have the corresponding database can use root, can also be used to bind the user name of the database)
+mysql_user=root
+#mysqlpassword
+mysql_passwd=123456
+# database is sent to the mailbox, if you need to install mail and remove the bank and the related notes
+info_sent_mail_to=admin@hhvm.biz
+# to backup site code directory.
+#home_dir=/home/wwwroot
+#mysqldump address
+mysqldump_dir=/usr/local/mysql/bin/mysqldump
+# backup configuration file location
+nginx_configuration_file=/usr/local/nginx/conf
+# local backup directory.
+local_bankup=/home/backup
+# local backup retention time
+expired_days=2
+# tasks: script timed execution time
+backup_time="10 3 * * * date"
 
-db_name=
-
-website_name=
-
-local_bankup_yn=y
-
-remote_bankup_yn=n
