--- a/options.conf
+++ b/options.conf
@@ -62,7 +62,7 @@ mysql_user=root
 #mysqlpassword
 mysql_passwd=123456
 # database is sent to the mailbox, if you need to install mail and remove the bank and the related notes
-info_sent_mail_to=admin@hhvm.biz
+info_sent_mail_to=admin@hhvmc.com
 # to backup site code directory.
 #home_dir=/home/wwwroot
 #mysqldump address
@@ -73,6 +73,8 @@ nginx_configuration_file=/usr/local/nginx/conf
 local_bankup=/home/backup
 # local backup retention time
 expired_days=2
+#domain name
+domain_name=hhvmc.com
 # tasks: script timed execution time
 backup_time="10 3 * * * date"
 
