--- a/conf/nginx_n.conf
+++ b/conf/nginx_n.conf
@@ -64,7 +64,7 @@ server
 	{
 		listen 80 default;
 		#listen [::]:80 default ipv6only=on;
-		server_name www.hhvm.biz;
+		server_name www.hhvmc.com;
 		index index.html index.htm index.php;
 		root  /home/wwwroot/default;
 
