--- a/conf/nginx_h.conf
+++ b/conf/nginx_h.conf
@@ -78,7 +78,8 @@ server
 			{
 				# comment try_files $uri =404; to enable pathinfo
 				try_files $uri =404;
-				fastcgi_pass 127.0.0.1:9000;			
+				#fastcgi_pass 127.0.0.1:9000;	
+				fastcgi_pass unix:/var/run/hhvm/server.sock;		
 				fastcgi_index index.php;
 				include fastcgi.conf;
 				#include pathinfo.conf;
